test/TestPhases/causality/invalid/Singleton9.blc
@[CFunction(binding="",header="")]
extern singleton function g()
    

function f()
    g()
end

function h() returns uint8
    g()
    return 7
end

activity B(x: uint8) returns uint8
    await true
    return 42
end

@[EntryPoint]
activity A()
    var foo: [30]uint8
    cobegin
        foo[h()] = run B(7)()
    with
        await true
        f()
    end
end